# OMC

./: README.md  setup.cfg
.github/workflows/: python-tests.yml
omc/: cli.py
omc/st/: app.py  style.css
