[metadata]
name = OMC
version = attr: omc.__version__
description = A somewhat privacy preserving chatbot that can run in the cloud or locally
long_description = file: README.md
url = https://github.com/dnouri/omc

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    openai
    streamlit

[options.entry_points]
console_scripts =
    omc = omc.cli:group

[options.extras_require]
devel =
    black==24.1.1
    pytest
    pytest-cov
    python-dotenv
    ruff==0.2.1
    wheel

[tool:pytest]
addopts =
    -v
    --tb=short
    --cov=omc
    --doctest-modules
testpaths =
    tests
markers =
    slow: mark test as slow.

[coverage:run]
branch = True
source = omc/
omit = omc/tests/**
